src/pages/Menu.css
.menu {
    display: flex;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1000;
    width: 1200px;
    height: 500px;
    background-color: #121212;
    border: 1px solid white;
    font-family: Inter;
    box-sizing: border-box;
}

.menu .close-button {
    position: absolute;
    top: 18px;
    right: 22px;
    cursor: pointer;
}

.menu-bar {
    width: 230px;
    border-right: 1px solid white;
    font-size: 18px;
    flex-shrink: 0;
}

.menu-bar ul {
    display: flex;
    flex-direction: column;
    margin-top: 65px;
    gap: 30px;
    align-items: center;
    padding: 0;
}

.menu-bar ul li {
    list-style: none;
    cursor: pointer;
}

.menu-bar ul hr {
    width: 150px;
}

.presets-container {
    display: flex;
    flex-direction: column;
    padding: 62px 45px;
    gap: 20px;
    overflow-y: auto;
    overflow-x: hidden;
    width: 100%;
    box-sizing: border-box;
}

.presets-container .add-button {
    align-self: flex-end;
    background-color: #121212;
    color: white;
    border: 1px solid white;
    width: 211px;
    height: 60px;
    font-size: 18px;
    cursor: pointer;
    transition: background-color 0.3s ease, color 0.3s ease;
    flex-shrink: 0;
}

.presets-container .add-button:hover {
    background-color: white;
    color: black;
}

.preset {
    padding: 12px 20px;
    border: 1px solid white;
    width: 860px;
    height: 120px;
    flex-shrink: 0;
    box-sizing: border-box;
}

.preset h2 {
    font-size: 18px;
    font-weight: normal;
    font-family: Inter;
    margin: 0;
}

.details {
    display: flex;
    margin-top: 28px;
    justify-content: space-between;
    font-size: 18px;
}

.details input {
    width: 50px;
    text-align: center;
    background-color: transparent;
    color: white;
    border: none;
    border-bottom: 1px solid white;
}

.details .preset-buttons {
    display: flex;
    gap: 5px;
}

.details .delete-button, .details .edit-button, .details .save-button {
    background: none;
    border: none;
    cursor: pointer;
}

.details svg {
    color: white;
}

.settings {
    display: flex;
    flex-direction: column;
    gap: 29px;
    padding: 76px 58px;
    font-size: 18px;
    width: 100%;
    box-sizing: border-box;
}

.setting {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 850px;
}

.setting input {
    width: 50px;
    text-align: center;
    background-color: transparent;
    color: white;
    border: none;
    border-bottom: 1px solid white;
}

.setting button {
    background-color: #121212;
    border: 1px solid white;
    color: white;
    height: 35px;
    width: 65px;
    font-size: 18px;
    cursor: pointer;
}

.setting .active-button {
    background-color: white;
    border: 1px solid white;
    color: black;
    height: 35px;
    width: 65px;
    font-size: 18px;
    cursor: pointer;
}

@media (max-width: 1250px) {
    .menu {
        width: 95%;
        height: 80vh;
    }
    
    .preset, .setting {
        width: 100%;
    }
}

@media (max-width: 768px) {
    .menu {
        flex-direction: column;
        height: 90vh;
    }

    .menu-bar {
        width: 100%;
        border-right: none;
        border-bottom: 1px solid white;
    }

    .menu-bar ul {
        flex-direction: row;
        margin-top: 40px;
        justify-content: center;
        margin-bottom: 15px;
    }

    .menu-bar ul hr {
        display: none;
    }

    .presets-container, .settings {
        padding: 20px;
    }

    .setting {
        flex-direction: column;
        align-items: flex-start;
        gap: 15px;
    }

    .details {
        flex-wrap: wrap;
        gap: 10px;
    }
}

